Add Google AdSense account meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="O1DUOqO-kHa6W86vH9VngXaX6f42ERIelQJsuOJpYog" />
+    <meta name="google-adsense-account" content="ca-pub-6978729582838063">
     <meta name="description" content="Discover practical tips for good living, wellness, and lifestyle improvements. Your guide to a healthier, happier life with VibeAndThrive.">
     <meta name="keywords" content="good living, wellness tips, healthy lifestyle, life improvement, wellness blog, vibe and thrive">
     <meta name="author" content="VibeAndThrive">
