--- a/privacy.html
+++ b/privacy.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-6978729582838063">
     <meta name="description" content="Privacy Policy for VibeAndThrive - Learn how we collect, use, and protect your personal information.">
     <title>Privacy Policy - VibeAndThrive</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
