Add Google AdSense account meta tag to terms.html

--- a/terms.html
+++ b/terms.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-6978729582838063">
     <meta name="description" content="Terms of Service for VibeAndThrive - Read our terms and conditions for using our website and services.">
     <title>Terms of Service - VibeAndThrive</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
