Add Google AdSense script to multiple HTML files for monetization

--- a/tips/better-sleep.html
+++ b/tips/better-sleep.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Transform your sleep quality with evidence-based strategies. Learn how to fall asleep faster, sleep deeper, and wake up refreshed.">
     <meta name="keywords" content="better sleep, sleep quality, insomnia relief, sleep hygiene, restful sleep">
     <title>Better Sleep Quality - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
