--- a/tips/creative-expression.html
+++ b/tips/creative-expression.html
@@ -6,6 +6,8 @@
     <title>Creative Expression: Unlock Your Inner Artist and Find Flow | VibeAndThrive</title>
     <meta name="description" content="Discover the power of creative expression for mental health, personal growth, and life satisfaction. Learn how to cultivate creativity and find your artistic voice.">
     <meta name="keywords" content="creativity, artistic expression, hobbies, mental health, flow state, art therapy, creative writing, personal growth">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
