--- a/tips/decluttering.html
+++ b/tips/decluttering.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Learn effective decluttering strategies to create a peaceful, organized home. Discover how to eliminate clutter, organize efficiently, and maintain a tidy living space.">
     <meta name="keywords" content="decluttering, organization, home organization, minimalism, tidy home, clean space, organizing tips">
     <title>Decluttering Your Space: Create Calm Through Organization | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
