--- a/tips/digital-minimalism.html
+++ b/tips/digital-minimalism.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Discover the principles of digital minimalism to reduce screen time, improve focus, and create healthier relationships with technology. Practical strategies for digital wellness.">
     <meta name="keywords" content="digital minimalism, screen time, technology wellness, digital detox, mindful technology, focus, productivity, mental health">
     <title>Digital Minimalism: Reclaim Your Life from Technology Overload | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
