--- a/tips/energy-boosting.html
+++ b/tips/energy-boosting.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Boost your energy naturally with nutrition, exercise, sleep optimization, and lifestyle changes for sustained vitality throughout the day.">
     <meta name="keywords" content="boost energy, natural energy, fatigue, vitality, energy foods, exercise for energy, sleep optimization">
     <title>Natural Energy Boosting Techniques - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
