--- a/tips/energy-efficient.html
+++ b/tips/energy-efficient.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Discover practical ways to make your home more energy-efficient. Learn simple changes that reduce utility bills while helping the environment.">
     <meta name="keywords" content="energy efficiency, save money, reduce bills, eco-friendly home, sustainable living, green energy, home energy savings">
     <title>Energy-Efficient Living: Save Money and Protect the Planet | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
