--- a/tips/goal-setting.html
+++ b/tips/goal-setting.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Master the art and science of goal setting. Learn proven strategies to set clear objectives, maintain motivation, and achieve meaningful success in all areas of life.">
     <meta name="keywords" content="goal setting, achievement, success, motivation, planning, SMART goals, personal development, productivity, life goals">
     <title>Effective Goal Setting: Turn Dreams into Achievable Reality | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
