--- a/tips/healthy-eating.html
+++ b/tips/healthy-eating.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Build sustainable healthy eating habits without drastic changes. Simple nutrition tips that nourish your body and satisfy your taste buds.">
     <meta name="keywords" content="healthy eating, nutrition tips, sustainable diet, healthy habits, mindful eating">
     <title>Healthy Eating Habits - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
