--- a/tips/home-fitness.html
+++ b/tips/home-fitness.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Stay active without a gym membership. Discover effective home fitness exercises with minimal equipment and maximum results from VibeAndThrive.">
     <meta name="keywords" content="home fitness, home workout, exercise at home, bodyweight exercises, fitness without gym, vibe and thrive">
     <title>Home Fitness Solutions - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
