--- a/tips/hydration.html
+++ b/tips/hydration.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Discover the transformative benefits of proper hydration. Learn how much water you need, signs of dehydration, and practical strategies to stay optimally hydrated.">
     <meta name="keywords" content="hydration, water intake, health benefits, energy boost, dehydration, daily water, wellness, healthy habits">
     <title>The Power of Proper Hydration: Boost Energy & Health | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
