--- a/tips/indoor-plants.html
+++ b/tips/indoor-plants.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Discover the benefits of indoor plants and learn how to choose, care for, and style houseplants that improve air quality, reduce stress, and beautify your home.">
     <meta name="keywords" content="indoor plants, houseplants, air purifying plants, plant care, indoor gardening, home decor, wellness, stress relief">
     <title>Indoor Plants: Bring Nature Home for Health and Happiness | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
