--- a/tips/meal-planning.html
+++ b/tips/meal-planning.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Master the art of meal planning with practical strategies to save time, reduce food waste, and improve nutrition. Learn weekly planning, batch cooking, and healthy meal prep techniques.">
     <meta name="keywords" content="meal planning, meal prep, weekly planning, healthy eating, nutrition, time saving, budget meals, batch cooking">
     <title>Strategic Meal Planning: Save Time, Money & Boost Health | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
