--- a/tips/mental-wellbeing.html
+++ b/tips/mental-wellbeing.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Practical strategies for managing stress, building resilience, and cultivating a positive mindset with VibeAndThrive's mental wellness guidance.">
     <meta name="keywords" content="mental wellbeing, stress management, resilience, positive mindset, mental health, mindfulness, vibe and thrive">
     <title>Mental Well-being - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
