--- a/tips/money-management.html
+++ b/tips/money-management.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Master effective money management with budgeting strategies, saving techniques, and smart financial planning for long-term wealth building.">
     <meta name="keywords" content="money management, budgeting, saving money, financial planning, personal finance, wealth building, emergency fund">
     <title>Smart Money Management - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
