--- a/tips/morning-wellness.html
+++ b/tips/morning-wellness.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Transform your mornings with this powerful 10-minute wellness routine. Boost energy, focus, and well-being for the entire day with VibeAndThrive.">
     <meta name="keywords" content="morning routine, wellness, energy boost, daily habits, healthy lifestyle, vibe and thrive">
     <title>Morning Wellness Routine - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
