--- a/tips/relationship-building.html
+++ b/tips/relationship-building.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Build strong, meaningful relationships with practical communication skills, trust-building strategies, and conflict resolution techniques.">
     <meta name="keywords" content="relationship building, communication skills, social connections, friendship, trust building, conflict resolution">
     <title>Building Stronger Relationships - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
