--- a/tips/self-care-routines.html
+++ b/tips/self-care-routines.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Learn how to design personalized self-care routines that nourish your mind, body, and spirit. Discover practical strategies for sustainable wellness and personal renewal.">
     <meta name="keywords" content="self-care, wellness routines, mental health, personal care, stress relief, mindfulness, self-love, wellbeing">
     <title>Self-Care Mastery: Creating Sustainable Wellness Routines | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
