--- a/tips/social-connection.html
+++ b/tips/social-connection.html
@@ -6,6 +6,8 @@
     <title>Social Connection: Building Meaningful Relationships and Community | VibeAndThrive</title>
     <meta name="description" content="Learn how to build meaningful relationships, strengthen social connections, and create a supportive community. Discover the importance of social wellness for mental health and life satisfaction.">
     <meta name="keywords" content="social connections, relationships, community building, friendship, social wellness, mental health, belonging, social skills">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
