--- a/tips/stress-management.html
+++ b/tips/stress-management.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Master effective stress management techniques to reduce anxiety, improve focus, and enhance your overall well-being with proven strategies.">
     <meta name="keywords" content="stress management, anxiety relief, stress reduction, mental health, relaxation techniques, mindfulness">
     <title>Effective Stress Management Techniques - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
