--- a/tips/sustainable-living.html
+++ b/tips/sustainable-living.html
@@ -6,6 +6,8 @@
     <title>Sustainable Living: Small Changes for a Greener Future | VibeAndThrive</title>
     <meta name="description" content="Discover practical ways to live more sustainably without sacrificing comfort or breaking the budget. Learn eco-friendly practices that benefit both you and the planet.">
     <meta name="keywords" content="sustainable living, eco-friendly, green living, environmental sustainability, zero waste, conscious consumption, climate action">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
