--- a/tips/time-blocking.html
+++ b/tips/time-blocking.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Learn the powerful time blocking technique to take control of your schedule, boost productivity, and create more balance in your life. Practical strategies for effective time management.">
     <meta name="keywords" content="time blocking, time management, productivity, scheduling, calendar blocking, focus, work-life balance, efficiency">
     <title>Time Blocking: Master Your Schedule for Maximum Productivity | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
