--- a/tips/time-management.html
+++ b/tips/time-management.html
@@ -6,6 +6,8 @@
     <title>Time Management Mastery: Optimize Your Days for Success | VibeAndThrive</title>
     <meta name="description" content="Master the art of time management with proven strategies for productivity, work-life balance, and achieving your goals. Learn to prioritize effectively and eliminate time wasters.">
     <meta name="keywords" content="time management, productivity, work-life balance, prioritization, goal setting, efficiency, planning, focus">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
