--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="keywords" content="good living, wellness tips, healthy lifestyle, life improvement, wellness blog, vibe and thrive">
     <meta name="author" content="VibeAndThrive">
     <title>VibeAndThrive - Your Guide to Better Life</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="apple-touch-icon" href="favicon.ico">
