--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,8 @@
     <meta name="google-adsense-account" content="ca-pub-6978729582838063">
     <meta name="description" content="Privacy Policy for VibeAndThrive - Learn how we collect, use, and protect your personal information.">
     <title>Privacy Policy - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="apple-touch-icon" href="favicon.ico">
