--- a/terms.html
+++ b/terms.html
@@ -6,6 +6,8 @@
     <meta name="google-adsense-account" content="ca-pub-6978729582838063">
     <meta name="description" content="Terms of Service for VibeAndThrive - Read our terms and conditions for using our website and services.">
     <title>Terms of Service - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="apple-touch-icon" href="favicon.ico">
