--- a/tips/color-psychology.html
+++ b/tips/color-psychology.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Discover how colors influence emotions, productivity, and wellbeing. Learn to use color psychology to create environments that support your goals and mood.">
     <meta name="keywords" content="color psychology, color therapy, mood colors, interior design, emotional wellbeing, color meanings, home decor">
     <title>Color Psychology: How Colors Affect Your Mood and Wellbeing | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
