--- a/tips/digital-detox.html
+++ b/tips/digital-detox.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Learn effective strategies for digital detox and screen time management. Discover how to create healthy boundaries with technology and improve your mental wellbeing.">
     <meta name="keywords" content="digital detox, screen time, technology balance, mental health, mindfulness, productivity, wellness">
     <title>Digital Detox: Reclaim Your Time and Mental Peace | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
