--- a/tips/healthy-habits.html
+++ b/tips/healthy-habits.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Discover proven strategies for building healthy habits that stick. Learn the psychology behind habit formation and practical techniques for lasting positive change.">
     <meta name="keywords" content="healthy habits, habit formation, behavior change, personal development, wellness, lifestyle, motivation, consistency">
     <title>Building Healthy Habits: The Science of Lasting Change | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
