--- a/tips/home-organization.html
+++ b/tips/home-organization.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Create and maintain organized, clutter-free spaces with effective decluttering strategies, storage solutions, and home organization systems.">
     <meta name="keywords" content="home organization, decluttering, cleaning tips, storage solutions, minimalism, organized living">
     <title>Home Organization and Decluttering - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
