--- a/tips/mindful-eating.html
+++ b/tips/mindful-eating.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Discover the life-changing practice of mindful eating. Learn to eat with awareness, improve digestion, and develop a healthier relationship with food through mindfulness techniques.">
     <meta name="keywords" content="mindful eating, mindfulness, conscious eating, healthy relationship with food, intuitive eating, awareness, nutrition, wellbeing">
     <title>Mindful Eating: Transform Your Relationship with Food | VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
