--- a/tips/mindful-productivity.html
+++ b/tips/mindful-productivity.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Learn mindful productivity techniques to accomplish more while stressing less. Work smarter, not harder with these proven strategies from VibeAndThrive.">
     <meta name="keywords" content="mindful productivity, work-life balance, focus techniques, stress management, efficiency, vibe and thrive">
     <title>Mindful Productivity - VibeAndThrive</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="apple-touch-icon" href="../favicon.ico">
