--- a/tips/personal-growth.html
+++ b/tips/personal-growth.html
@@ -6,6 +6,8 @@
     <title>Personal Growth and Goal Setting: Transform Your Life with Purpose | VibeAndThrive</title>
     <meta name="description" content="Master the art of personal growth and effective goal setting. Learn proven strategies for self-improvement, achievement, and creating lasting positive change in your life.">
     <meta name="keywords" content="personal growth, goal setting, self-improvement, personal development, life goals, success, motivation, achievement, life transformation">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6978729582838063"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
