--- a/index.html
+++ b/index.html
@@ -286,6 +286,9 @@
                     </div>
                     <button type="submit" class="btn btn-primary">Send Message</button>
                 </form>
+                <div class="contact-note">
+                    <p><i class="fas fa-info-circle"></i> For more detailed inquiries, visit our <a href="contact.html">dedicated contact page</a>.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -311,6 +314,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#tips">Tips</a></li>
                         <li><a href="#categories">Categories</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -327,7 +331,7 @@
                     <ul>
                         <li><a href="privacy.html">Privacy Policy</a></li>
                         <li><a href="terms.html">Terms of Service</a></li>
-                        <li><a href="#contact">Contact Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="sitemap.html">Sitemap</a></li>
                     </ul>
                 </div>
