--- a/sitemap.html
+++ b/sitemap.html
@@ -58,7 +58,8 @@
                         <ul class="sitemap-list">
                             <li><a href="index.html">Home</a></li>
                             <li><a href="index.html#about">About Us</a></li>
-                            <li><a href="index.html#contact">Contact</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="index.html#contact">Quick Contact</a></li>
                         </ul>
                     </div>
 
