Update contact links across multiple pages to point directly to contact.html instead of using fragment identifiers. Removed display note from contact form and ensured consistent navigation structure throughout the site.

--- a/sitemap.html
+++ b/sitemap.html
@@ -33,7 +33,7 @@
                         <a href="index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="index.html#contact" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
