--- a/tips/home-organization.html
+++ b/tips/home-organization.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -506,7 +506,7 @@
                     <p>Start with just one small area today. Remember, organization is not about perfection—it's about creating a space that supports your well-being and helps you live your best life!</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">More Home Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Get Organization Help</a>
+                        <a href="../contact.html" class="btn btn-secondary">Get Organization Help</a>
                     </div>
                 </div>
             </div>
