--- a/tips/mental-wellbeing.html
+++ b/tips/mental-wellbeing.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -331,7 +331,7 @@
                     <p>Start with one small practice today. Mental well-being is built through consistent, gentle care for yourself.</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">Explore More Wellness Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Get Support</a>
+                        <a href="../contact.html" class="btn btn-secondary">Get Support</a>
                     </div>
                 </div>
             </div>
