--- a/tips/money-management.html
+++ b/tips/money-management.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -512,7 +512,7 @@
                     <p>Financial freedom starts with a single step. Choose one strategy from this guide and start today—your future self will thank you!</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">More Life Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Get Financial Guidance</a>
+                        <a href="../contact.html" class="btn btn-secondary">Get Financial Guidance</a>
                     </div>
                 </div>
             </div>
