--- a/tips/relationship-building.html
+++ b/tips/relationship-building.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -418,7 +418,7 @@
                     <p>Great relationships don't happen by accident—they're built through intentional actions and consistent care. Start with one relationship and one technique!</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">More Life Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Get Relationship Guidance</a>
+                        <a href="../contact.html" class="btn btn-secondary">Get Relationship Guidance</a>
                     </div>
                 </div>
             </div>
