--- a/tips/stress-management.html
+++ b/tips/stress-management.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -377,7 +377,7 @@
                     <p>Begin with one technique and gradually build your stress management skills. Remember, managing stress is a practice, not perfection!</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">More Wellness Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Get Personal Guidance</a>
+                        <a href="../contact.html" class="btn btn-secondary">Get Personal Guidance</a>
                     </div>
                 </div>
             </div>
