--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="#categories" class="nav-link">Categories</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#contact" class="nav-link">Contact</a>
+                        <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
