--- a/tips/better-sleep.html
+++ b/tips/better-sleep.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -381,7 +381,7 @@
                     <p>Choose one technique to implement tonight. Small, consistent improvements lead to transformative sleep quality.</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">More Wellness Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Sleep Support</a>
+                        <a href="../contact.html" class="btn btn-secondary">Sleep Support</a>
                     </div>
                 </div>
             </div>
