--- a/tips/creative-expression.html
+++ b/tips/creative-expression.html
@@ -23,7 +23,7 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../index.html#categories">Categories</a></li>
                     <li><a href="../index.html#about">About</a></li>
-                    <li><a href="../index.html#contact">Contact</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -306,7 +306,7 @@
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../index.html#about">About</a></li>
-                        <li><a href="../index.html#contact">Contact</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
                         <li><a href="../sitemap.html">Sitemap</a></li>
                     </ul>
                 </div>
