--- a/tips/decluttering.html
+++ b/tips/decluttering.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -311,7 +311,7 @@
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../index.html#about">About</a></li>
-                        <li><a href="../index.html#contact">Contact</a></li>
+                        <li><a href="../contact.html">Contact</a></li>
                         <li><a href="../sitemap.html">Sitemap</a></li>
                     </ul>
                 </div>
