--- a/tips/digital-minimalism.html
+++ b/tips/digital-minimalism.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -407,7 +407,7 @@
                     <ul>
                         <li><a href="../privacy.html">Privacy Policy</a></li>
                         <li><a href="../terms.html">Terms of Service</a></li>
-                        <li><a href="../index.html#contact">Contact Us</a></li>
+                        <li><a href="../contact.html">Contact Us</a></li>
                         <li><a href="../sitemap.html">Sitemap</a></li>
                     </ul>
                 </div>
