--- a/tips/energy-boosting.html
+++ b/tips/energy-boosting.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -538,7 +538,7 @@
                     <p>Choose 2-3 strategies that resonate with you and implement them consistently. Small changes in these areas can lead to dramatic improvements in your energy levels!</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">More Wellness Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Get Energy Coaching</a>
+                        <a href="../contact.html" class="btn btn-secondary">Get Energy Coaching</a>
                     </div>
                 </div>
             </div>
