--- a/tips/healthy-eating.html
+++ b/tips/healthy-eating.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -353,7 +353,7 @@
                     <p>Begin with just one small change this week. Remember, sustainable progress beats perfection every time!</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">More Health Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Get Nutrition Guidance</a>
+                        <a href="../contact.html" class="btn btn-secondary">Get Nutrition Guidance</a>
                     </div>
                 </div>
             </div>
