--- a/tips/home-fitness.html
+++ b/tips/home-fitness.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -292,7 +292,7 @@
                     <p>Remember, the best workout is the one you'll actually do consistently. Start with what feels manageable and build from there.</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">More Health Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Get Support</a>
+                        <a href="../contact.html" class="btn btn-secondary">Get Support</a>
                     </div>
                 </div>
             </div>
