--- a/tips/mindful-productivity.html
+++ b/tips/mindful-productivity.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -294,7 +294,7 @@
                     <p>Begin tomorrow by choosing just one principle to implement. Small, consistent changes lead to remarkable transformations.</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">Explore More Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Get Support</a>
+                        <a href="../contact.html" class="btn btn-secondary">Get Support</a>
                     </div>
                 </div>
             </div>
