--- a/tips/morning-wellness.html
+++ b/tips/morning-wellness.html
@@ -34,7 +34,7 @@
                         <a href="../index.html#tips" class="nav-link">Tips</a>
                     </li>
                     <li class="nav-item">
-                        <a href="../index.html#contact" class="nav-link">Contact</a>
+                        <a href="../contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
                 <div class="hamburger">
@@ -196,7 +196,7 @@
                     <p>Tomorrow morning, set your alarm 10 minutes earlier and begin this life-changing routine. Your future self will thank you!</p>
                     <div class="action-buttons">
                         <a href="../index.html#tips" class="btn btn-primary">Explore More Tips</a>
-                        <a href="../index.html#contact" class="btn btn-secondary">Ask Questions</a>
+                        <a href="../contact.html" class="btn btn-secondary">Ask Questions</a>
                     </div>
                 </div>
             </div>
