Enhance navigation styles and update sitemap URL for better accessibility and SEO

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <h2><i class="fas fa-leaf"></i> VibeAndThrive</h2>
+                    <a href="/">
+                        <h2><i class="fas fa-leaf"></i> VibeAndThrive</h2>
+                    </a>
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
